# jnb-sfml

./: .gitignore  CMakeLists.txt
data/: font.pcx  objects.pcx  rabbit.pcx
data/anims/: r1_death_left.txt  r1_death_right.txt  r1_fly_down_left.txt  r1_fly_down_right.txt  r1_fly_mid_left.txt  r1_fly_mid_right.txt  r1_fly_up_left.txt  r1_fly_up_right.txt  r1_run_left.txt  r1_run_right.txt  r1_stand_left.txt  r1_stand_right.txt  r2_death_left.txt  r2_death_right.txt  r2_fly_down_left.txt  r2_fly_down_right.txt  r2_fly_mid_left.txt  r2_fly_mid_right.txt  r2_fly_up_left.txt  r2_fly_up_right.txt  r2_run_left.txt  r2_run_right.txt  r2_stand_left.txt  r2_stand_right.txt  r3_death_left.txt  r3_death_right.txt  r3_fly_down_left.txt  r3_fly_down_right.txt  r3_fly_mid_left.txt  r3_fly_mid_right.txt  r3_fly_up_left.txt  r3_fly_up_right.txt  r3_run_left.txt  r3_run_right.txt  r3_stand_left.txt  r3_stand_right.txt  r4_death_left.txt  r4_death_right.txt  r4_fly_down_left.txt  r4_fly_down_right.txt  (+8 more)
src/: animation.cpp  animation.h  background_grid.cpp  background_grid.h  debug.cpp  debug.h  editor.ui  editor_main.cpp  editor_window.h  file_path.cpp  file_path.h  frame_animation.cpp  frame_animation.h  hitInfo.h  level.cpp  level.h  main.cpp  params.cpp  params.h  rabbit.cpp  rabbit.h  render.cpp  render.h  texture_manager.cpp  texture_manager.h  utils.cpp  utils.h
